<resources>
    <string name="app_name">Ebay Scraper</string>
    <string name="scanner">Barcode scanner</string>
    <string name="ebay_token" translatable="false">MaksimKo-agregato-PRD-5388a6d5f-1b894369</string>
    <string name="discogs_token" translatable="false">BKIPShmLTgeDnsHvkdmHsSMgAnkrCBgIUCRyvmKw</string>


    <string name="ebay_search">Classic Ebay search</string>
    <string name="terapeak_search">Terapeak search</string>
    <string name="trying_to_login">Trying to login…</string>
    <string name="log_out">Log out</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="countinue">Continue</string>
    <string name="falied_to_login">Failed to log in</string>
    <string name="not_logged_in">Not logged in</string>

    <string name="input_queries">Input queries:</string>
    <string name="upc">UPC:</string>
    <string name="items_limit">Items limit:</string>
    <string name="day_range">Range of days:</string>
    <string name="max_threads">Max threads:</string>
    <string name="category">Category:</string>
    <string name="subcategory">Subcategory:</string>

    <string name="condition">Condition:</string>
    <string-array name="conditions">
        <item>All</item>
        <item>New</item>
        <item>Used</item>
    </string-array>

    <string name="query">Query</string>
    <string name="active_found">Active\nitems</string>
    <string name="sold_found">Sold\nitems</string>
    <string name="avg_listed">AVG $\nListed</string>
    <string name="avg_sold">AVG $\nSold</string>
    <string name="sold_ratio">Sold, %</string>
    <string name="current_value">Current\nvalue</string>

    <string name="search">Search</string>
    <string name="stop">Stop</string>
    <string name="convert_upcs">Convert</string>
    <string name="clear">Clear</string>
    <string name="select">Select</string>
    <string name="back">Back</string>
    <string name="minimize">↑</string>
    <string name="expand">↓</string>
    <string name="active">Active</string>
    <string name="sold">Sold</string>

    <string name="no_queries">No queries are specified</string>
    <string name="no_upc">No UPCs are specified</string>
    <string name="incorrect_items_limit">Incorrect items limit!</string>
    <string name="needs_camera_permission">Please grant camera permission to use the barcode scanner</string>

    <string name="bids">Bids: %1$s</string>
    <string name="watches">Watches: %1$s</string>
    <string name="total_sold">Sold: %1$s</string>
    <string name="total_sales">Sales: %1$s</string>

</resources>
